--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-VITE_SIGN_IN_URL=/auth/login  
-VITE_SIGN_UP_URL=/auth/register  
+VITE_SIGN_IN_URL=/auth/sign-in  
+VITE_SIGN_UP_URL=/auth/sign-up  
+VITE_SIGN_OUT_URL=/auth/sign-out  
+VITE_ME_URL=/auth/me  
 VITE_API_URL=http://localhost:3000/api/v1
