--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.535.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
