feat: update authentication state management to use Zustand for persistence; modify API URLs for production; enhance AuthDialog and Navbar components for improved user experience

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ VITE_SIGN_IN_URL=/auth/sign-in
 VITE_SIGN_UP_URL=/auth/sign-up  
 VITE_SIGN_OUT_URL=/auth/sign-out  
 VITE_ME_URL=/auth/me  
-VITE_API_URL=http://localhost:3000/api/v1
+VITE_API_URL=https://flexify-backend.vercel.app/api/v1
