feat: enhance dashboard functionality by integrating Zustand for state management, updating API endpoints, and refactoring project and technology components for improved data handling and user experience

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ VITE_SIGN_UP_URL=/auth/sign-up
 VITE_SIGN_OUT_URL=/auth/sign-out  
 VITE_ME_URL=/auth/me  
 VITE_API_URL=https://flexify-backend.vercel.app/api/v1
+
+
+VITE_PROJECTS_URL=/projects
