--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
