feat: add profile picture upload functionality and enhance personal info form; update API integration and validation for improved user experience

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ VITE_API_URL=https://flexify-backend.vercel.app/api/v1
 
 VITE_PROJECTS_URL=/projects
 VITE_CONTACT_URL=/contact
+VITE_UPLOAD_PROFILE_PICTURE_URL=/file-upload/profile-picture
